# s2-chunking-lib

./: .gitignore  CHANGELOG.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt  setup.py
docs/: api.md
examples/: example.py
examples/output/: chunking_results.txt
examples/output/chunks/: chunk_000.md  chunk_001.md  chunk_002.md  chunk_003.md
models/models--vprashant--doclayout_detector/refs/: main
models/models--vprashant--doclayout_detector/snapshots/908b99e8e7b554a2fe5beae5d2f022449747ac6d/weights/: best.pt
output/chunks/: chunk_000.md  chunk_001.md
src/s2chunking/: __init__.py  bbox_order.py  chunk_formatter.py  layout_deter.py  s2_chunker.py  utils.py
tests/: test_chunker.py
